NetBSD Problem Report #42526

From www@NetBSD.org  Sun Dec 27 08:28:51 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 4C13C63C37E
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 27 Dec 2009 08:28:51 +0000 (UTC)
Message-Id: <20091227082851.143C563B844@www.NetBSD.org>
Date: Sun, 27 Dec 2009 08:28:51 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing parenthesis in sys/arch/hpcmips/vr/vr4181aiu.c .
X-Send-Pr-Version: www-1.0

>Number:         42526
>Category:       port-hpcmips
>Synopsis:       Missing parenthesis in sys/arch/hpcmips/vr/vr4181aiu.c .
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-hpcmips-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Dec 27 08:30:01 +0000 2009
>Closed-Date:    Sun Jun 06 06:22:13 +0000 2010
>Last-Modified:  Sun Jun 06 06:22:13 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Missing parenthesis found with cppcheck.
>How-To-Repeat:
diff -u -r1.6 vr4181aiu.c
--- sys/arch/hpcmips/vr/vr4181aiu.c	11 Jun 2008 23:53:15 -0000	1.6
+++ sys/arch/hpcmips/vr/vr4181aiu.c	1 Dec 2009 09:10:48 -0000
@@ -235,7 +235,7 @@
 {
 	struct vr4181aiu_softc	*sc;

-	sc = device_lookup_private(&vr4181aiu_cd, minor(dev);
+	sc = device_lookup_private(&vr4181aiu_cd, minor(dev));
 	if (sc == NULL)
 		return ENXIO;

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42526 CVS commit: src/sys/arch/hpcmips/vr
Date: Sun, 6 Jun 2010 06:10:04 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sun Jun  6 06:10:03 UTC 2010

 Modified Files:
 	src/sys/arch/hpcmips/vr: vr4181aiu.c

 Log Message:
 Add missing close-parenthesis; reported by Henning Petersen in PR 42526.
 (HI CEGGER!)


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/sys/arch/hpcmips/vr/vr4181aiu.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 06 Jun 2010 06:22:13 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.