Add missing close-parenthesis; reported by Henning Petersen in PR 42526. (HI CEGGER!)